--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "php": "7.4.16"
-    }
+    },
+    "require-dev": {
+        "heroku/heroku-buildpack-php": "*"
+      }
 }
